@@ -1,7 +1,7 @@
 /****************************************************************************
  * sched/task_start.c
  *
- *   Copyright (C) 2007-2009 Gregory Nutt. All rights reserved.
+ *   Copyright (C) 2007-2010 Gregory Nutt. All rights reserved.
  *   Author: Gregory Nutt <spudmonkey@racsa.co.cr>
  *
  * Redistribution and use in source and binary forms, with or without
@@ -108,7 +108,8 @@ void task_start(void)
     }
 
   /* Call the 'main' entry point passing argc and argv.  If/when
-   * the task returns,  */
+   * the task returns.
+   */
 
   exit(tcb->entry.main(argc, tcb->argv));
 }
